# face-hub

./: .gitignore  CLAUDE.md  DEVELOPER.md  LICENSE  README.md  REFACTOR_PLAN.md  RELEASE_PLAN.md  SECURITY_PERFORMANCE_REPORT.md  UPDATE.md  benchmark.py  fps_preview.py  pressuretest.MD  pyproject.toml
.github/workflows/: docs.yml  nightly-stress.yml  publish.yml
docs/: index.md  mkdocs.yml
docs/assets/javascripts/: hero.js
docs/assets/stylesheets/: extra.css
docs/en/: index.md  installation.md  quickstart.md
docs/en/api/: camera.md  classifier.md  config.md  database.md  detector.md  exceptions.md  pipeline.md  recognizer.md  tracker.md  types.md
docs/en/examples/: basic_webcam.md  custom_detector.md
docs/zh/: index.md  installation.md  quickstart.md
docs/zh/api/: camera.md  classifier.md  config.md  database.md  detector.md  exceptions.md  pipeline.md  recognizer.md  tracker.md  types.md
docs/zh/examples/: basic_webcam.md  custom_detector.md
face_hub/: __init__.py  detector_protocol.py  exceptions.py  pipeline.py  types.py
face_hub/engine/: __init__.py  camera.py  config.py  face_database.py  face_detector.py  face_recognizer.py  face_tracker.py  photo_classifier.py
face_vision/: __init__.py  detector_protocol.py  exceptions.py  pipeline.py  types.py
face_vision/engine/: __init__.py  camera.py  config.py  face_database.py  face_detector.py  face_recognizer.py  face_tracker.py
tests/: conftest.py  test_config.py  test_det_interval.py  test_detector_protocol.py  test_exceptions.py  test_face_database.py  test_face_detector.py  test_face_recognizer.py  test_face_tracker.py  test_photo_classifier.py  test_pipeline.py  test_types.py
tests/stress/: baseline.json  conftest.py  test_camera_stress.py  test_database_stress.py  test_detector_stress.py  test_pipeline_stress.py  test_real_model_slow.py  test_recognizer_stress.py  test_tracker_stress.py
