[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-hub"
dynamic = ["version"]
description = "Real-time face recognition library: detection, embedding, tracking and matching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AllenDeng" },
]
keywords = ["face-recognition", "insightface", "retinaface", "arcface", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "opencv-python>=4.8.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gpu-win = ["onnxruntime-directml>=1.24.0"]
gpu-linux = ["onnxruntime-gpu>=1.18.0"]
dev = ["pytest>=7.0", "build>=0.10", "twine>=4.0"]

[project.urls]
Homepage = "https://github.com/allen902/face_vision"
Documentation = "https://allen902.github.io/face_vision/"
Repository = "https://github.com/allen902/face_vision"
Issues = "https://github.com/allen902/face_vision/issues"

[tool.setuptools.dynamic]
version = { attr = "face_hub.__version__" }

[tool.setuptools.packages.find]
include = ["face_hub*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
