[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-hub"
dynamic = ["version"]
description = "Real-time face recognition library: detection, embedding, tracking and matching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AllenDeng" },
]
keywords = ["face-recognition", "insightface", "retinaface", "arcface", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "opencv-python>=4.8.0,<5",
    "insightface>=0.7.3,<1",
    "onnxruntime>=1.18.0,<2",
    "numpy>=1.24.0,<3",
    "Pillow>=10.0.0,<11",
]

[project.optional-dependencies]
gpu-win = ["onnxruntime-directml>=1.24.0"]
gpu-linux = ["onnxruntime-gpu>=1.18.0"]
dev = ["pytest>=7.0", "build>=0.10", "twine>=4.0", "psutil>=5.9.0"]

[project.urls]
Homepage = "https://github.com/allen902/face-hub"
Documentation = "https://allen902.github.io/face-hub/"
Repository = "https://github.com/allen902/face-hub"
Issues = "https://github.com/allen902/face-hub/issues"

[tool.setuptools.dynamic]
version = { attr = "face_hub.__version__" }

[tool.setuptools.packages.find]
include = ["face_hub*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "stress: 压力/稳定性测试（默认跳过，通过 --run-stress 启用）",
    "slow: 真实模型/长时间测试（默认跳过，通过 --run-slow 启用）",
    "memory: 内存回归测试（默认跳过，通过 --run-memory 启用）",
    "hardware: 依赖摄像头/GPU 的测试（仅本地执行）",
]
